@@ -3,9 +3,9 @@ name: Linux
 on:
   push:
     branches:
-      - '*'
+      - "*"
     tags-ignore:
-      - '*'
+      - "*"
   pull_request:
 
 jobs:
@@ -15,12 +15,14 @@ jobs:
         os:
           - ubuntu-latest
         raku-version:
-          - 'latest'
+          - "latest"
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - uses: Raku/setup-raku@v1
         with:
           raku-version: ${{ matrix.raku-version }}
+      - name: Install Dependencies
+        run: zef install --/test --test-depends --deps-only .
       - name: Run Special Tests
         run: raku run-tests -i
