@@ -8,4 +8,4 @@ filename = lib/SSH/LibSSH/Tunnel.rakumod
 [Badges]
 provider = github-actions/linux.yml
 provider = github-actions/macos.yml
-provider = github-actions/windows.yml
+#provider = github-actions/windows.yml
